--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
 python = "^3.9"
 Django = "^4.0.4"
 django-allauth = "^0.50.0"
+python-webpack-boilerplate = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 
