--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -10,8 +10,34 @@ Django = "^4.0.4"
 django-allauth = "^0.50.0"
 python-webpack-boilerplate = "^1.0.0"
 django-widget-tweaks = "^1.4.12"
+mkdocs = "^1.4.2"
+mkdocstrings = "^0.20.0"
+mkdocs-material = "^9.0.12"
 
 [tool.poetry.dev-dependencies]
+
+
+[tool.poetry.group.dev.dependencies]
+pylint = "^2.17.1"
+pylint-django = "^2.5.3"
+pre-commit = "^3.2.1"
+
+[tool.isort]
+profile = "django"
+combine_as_imports = true
+include_trailing_comma = true
+line_length = 120
+multi_line_output = 3
+
+[tool.black]
+line-length = 120
+target-version = ['py39']
+include = '\.pyi?$'
+
+[tool.djlint]
+profile="django"
+ignore = "H031"
+
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
