--- a/{{ cookiecutter.project_slug }}/.pre-commit-config.yaml
+++ b/{{ cookiecutter.project_slug }}/.pre-commit-config.yaml
@@ -14,6 +14,11 @@ repos:
   - id: black
     language_version: python3.9
 
+- repo: https://github.com/charliermarsh/ruff-pre-commit
+  rev: 'v0.0.260'
+  hooks:
+    - id: ruff
+
 - repo: https://github.com/pycqa/isort
   rev: 5.12.0
   hooks:
