--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -6,13 +6,13 @@ authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Django = "^4.0.4"
 django-allauth = "^0.50.0"
 python-webpack-boilerplate = "^1.0.0"
 django-widget-tweaks = "^1.4.12"
 mkdocs = "^1.4.2"
 mkdocstrings = "^0.20.0"
 mkdocs-material = "^9.0.12"
+django = "^5.0.4"
 
 [tool.poetry.dev-dependencies]
 
@@ -21,6 +21,7 @@ mkdocs-material = "^9.0.12"
 pylint = "^2.17.1"
 pylint-django = "^2.5.3"
 pre-commit = "^3.2.1"
+mkdocs = "^1.6.0"
 
 [tool.isort]
 profile = "django"
