--- a/{{ cookiecutter.project_slug }}/package.json
+++ b/{{ cookiecutter.project_slug }}/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "core-js": "^3.20.3"
+    "core-js": "^3.20.3",
+    "cssnano": "^7.0.1"
   }
 }
