--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -13,6 +13,8 @@ mkdocs = "^1.4.2"
 mkdocstrings = "^0.20.0"
 mkdocs-material = "^9.0.12"
 django = "^5.0.4"
+django-environ = "^0.11.2"
+psycopg2 = "^2.9.9"
 
 [tool.poetry.dev-dependencies]
 
