--- a/{{ cookiecutter.project_slug }}/package.json
+++ b/{{ cookiecutter.project_slug }}/package.json
@@ -56,6 +56,9 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@hotwired/stimulus": "^3.2.2",
+    "@hotwired/stimulus-webpack-helpers": "^1.0.1",
+    "@stimulus-components/dropdown": "^3.0.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.20.3",
     "cssnano": "^7.0.1"
