--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -1,5 +1,13 @@
 DEBUG=on
+ENVIRONMENT=dev
 
 # Get his values after creating a new app on GitHub: https://github.com/settings/applications/new
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
+
+DATABASE_URL=postgres://{{ cookiecutter.project_slug }}:{{ cookiecutter.project_slug }}@db:5432/{{ cookiecutter.project_slug }}
+REDIS_URL=redis://:{{ cookiecutter.project_slug }}@redis:6379/0
+
+AWS_S3_ENDPOINT_URL=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
