--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -15,6 +15,15 @@ mkdocs-material = "^9.0.12"
 django = "^5.0.4"
 django-environ = "^0.11.2"
 psycopg2 = "^2.9.9"
+ipython = "^8.27.0"
+django-extensions = "^3.2.3"
+pillow = "^10.4.0"
+django-q2 = "^1.7.2"
+whitenoise = "^6.7.0"
+django-storages = {extras = ["s3"], version = "^1.14.4"}
+structlog = "^24.4.0"
+django-structlog = "^8.1.0"
+markdown = "^3.7"
 
 [tool.poetry.dev-dependencies]
 
