--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -1,5 +1,8 @@
 DEBUG=on
 ENVIRONMENT=dev
+SECRET_KEY="super-secret-key"
+ALLOWED_HOSTS=*
+CSRF_TRUSTED_ORIGINS=http://127.0.0.1:8000,http://localhost:8000
 
 # Get his values after creating a new app on GitHub: https://github.com/settings/applications/new
 GITHUB_CLIENT_ID=""
@@ -11,3 +14,5 @@ REDIS_URL=redis://:{{ cookiecutter.project_slug }}@redis:6379/0
 AWS_S3_ENDPOINT_URL=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+
+SENTRY_DSN=
