--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -24,6 +24,18 @@ django-storages = {extras = ["s3"], version = "^1.14.4"}
 structlog = "^24.4.0"
 django-structlog = "^8.1.0"
 markdown = "^3.7"
+sentry-sdk = {extras = ["django"], version = "^2.14.0"}
+opentelemetry-exporter-otlp = "^1.27.0"
+opentelemetry-distro = "^0.48b0"
+opentelemetry-instrumentation-django = "^0.48b0"
+opentelemetry-api = "^1.27.0"
+opentelemetry-sdk = "^1.27.0"
+opentelemetry-instrumentation-psycopg2 = "^0.48b0"
+opentelemetry-instrumentation-redis = "^0.48b0"
+opentelemetry-instrumentation-logging = "^0.48b0"
+gunicorn = "^23.0.0"
+pytest = "^8.3.3"
+pytest-django = "^4.9.0"
 
 [tool.poetry.dev-dependencies]
 
