--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -36,6 +36,7 @@ opentelemetry-instrumentation-logging = "^0.48b0"
 gunicorn = "^23.0.0"
 pytest = "^8.3.3"
 pytest-django = "^4.9.0"
+redis = "^5.0.8"
 
 [tool.poetry.dev-dependencies]
 
