--- a/{{ cookiecutter.project_slug }}/package.json
+++ b/{{ cookiecutter.project_slug }}/package.json
@@ -59,6 +59,7 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/stimulus-webpack-helpers": "^1.0.1",
     "@stimulus-components/dropdown": "^3.0.0",
+    "@stimulus-components/reveal": "^5.0.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.20.3",
     "cssnano": "^7.0.1"
