--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -4,9 +4,11 @@ SECRET_KEY="super-secret-key"
 ALLOWED_HOSTS=*
 CSRF_TRUSTED_ORIGINS=http://127.0.0.1:8000,http://localhost:8000
 
+{% if cookiecutter.use_github_auth == 'y' -%}
 # Get his values after creating a new app on GitHub: https://github.com/settings/applications/new
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
+{% endif -%}
 
 DATABASE_URL=postgres://{{ cookiecutter.project_slug }}:{{ cookiecutter.project_slug }}@db:5432/{{ cookiecutter.project_slug }}
 REDIS_URL=redis://:{{ cookiecutter.project_slug }}@redis:6379/0
@@ -16,3 +18,9 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 
 SENTRY_DSN=
+
+MAILGUN_API_KEY=
+
+{% if cookiecutter.use_posthog == 'y' -%}
+POSTHOG_API_KEY=
+{% endif -%}
