--- a/{{ cookiecutter.project_slug }}/requirements.txt
+++ b/{{ cookiecutter.project_slug }}/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.8.1 ; python_version >= "3.10" and python_version < "4.0"
 asttokens==2.4.1 ; python_version >= "3.10" and python_version < "4.0"
 async-timeout==4.0.3 ; python_version >= "3.10" and python_full_version < "3.11.3"
 babel==2.15.0 ; python_version >= "3.10" and python_version < "4.0"
+backoff==2.2.1 ; python_version >= "3.10" and python_version < "4.0"
 binaryornot==0.4.4 ; python_version >= "3.10" and python_version < "4.0"
 boto3==1.35.22 ; python_version >= "3.10" and python_version < "4.0"
 botocore==1.35.22 ; python_version >= "3.10" and python_version < "4.0"
@@ -17,6 +18,7 @@ cryptography==39.0.1 ; python_version >= "3.10" and python_version < "4.0"
 decorator==5.1.1 ; python_version >= "3.10" and python_version < "4.0"
 deprecated==1.2.14 ; python_version >= "3.10" and python_version < "4.0"
 django-allauth[socialaccount]==64.0.0 ; python_version >= "3.10" and python_version < "4.0"
+django-anymail[mailgun]==12.0 ; python_version >= "3.10" and python_version < "4.0"
 django-environ==0.11.2 ; python_version >= "3.10" and python_version < "4"
 django-extensions==3.2.3 ; python_version >= "3.10" and python_version < "4.0"
 django-ipware==7.0.1 ; python_version >= "3.10" and python_version < "4.0"
@@ -50,6 +52,7 @@ mkdocs-material-extensions==1.3.1 ; python_version >= "3.10" and python_version 
 mkdocs-material==9.5.23 ; python_version >= "3.10" and python_version < "4.0"
 mkdocs==1.6.0 ; python_version >= "3.10" and python_version < "4.0"
 mkdocstrings==0.20.0 ; python_version >= "3.10" and python_version < "4.0"
+monotonic==1.6 ; python_version >= "3.10" and python_version < "4.0"
 oauthlib==3.2.2 ; python_version >= "3.10" and python_version < "4.0"
 opentelemetry-api==1.27.0 ; python_version >= "3.10" and python_version < "4.0"
 opentelemetry-distro==0.48b0 ; python_version >= "3.10" and python_version < "4.0"
@@ -76,6 +79,7 @@ pexpect==4.9.0 ; python_version >= "3.10" and python_version < "4.0" and (sys_pl
 pillow==10.4.0 ; python_version >= "3.10" and python_version < "4.0"
 platformdirs==3.2.0 ; python_version >= "3.10" and python_version < "4.0"
 pluggy==1.5.0 ; python_version >= "3.10" and python_version < "4.0"
+posthog==3.6.6 ; python_version >= "3.10" and python_version < "4.0"
 prompt-toolkit==3.0.47 ; python_version >= "3.10" and python_version < "4.0"
 protobuf==4.25.5 ; python_version >= "3.10" and python_version < "4.0"
 psycopg2==2.9.9 ; python_version >= "3.10" and python_version < "4.0"
