--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -24,3 +24,7 @@ MAILGUN_API_KEY=
 {% if cookiecutter.use_posthog == 'y' -%}
 POSTHOG_API_KEY=
 {% endif -%}
+
+{% if cookiecutter.use_buttondown == 'y' -%}
+BUTTONDOWN_API_KEY=
+{% endif -%}
