--- a/{{ cookiecutter.project_slug }}/.github/workflows/deploy.yml
+++ b/{{ cookiecutter.project_slug }}/.github/workflows/deploy.yml
@@ -23,8 +23,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.REGISTRY_TOKEN }}
+          username: ${{ "{{ github.repository_owner }}" }}
+          password: ${{ "{{ secrets.REGISTRY_TOKEN }}" }}
 
       - name: Build and push
         uses: docker/build-push-action@v6
@@ -32,12 +32,12 @@ jobs:
           context: .
           push: true
           file: deployment/Dockerfile.server
-          tags: ghcr.io/${{ github.repository }}
+          tags: ghcr.io/${{ "{{ github.repository }}" }}
 
       - name: Deploy to CapRover
         uses: caprover/deploy-from-github@main
         with:
-            server: ${{ secrets.CAPROVER_SERVER }}
-            app: ${{ env.PROJECT_NAME }}
-            token: '${{ secrets.APP_TOKEN }}'
-            image: ghcr.io/${{ github.repository }}
+            server: ${{ "{{ secrets.CAPROVER_SERVER }}" }}
+            app: ${{ "{{ env.PROJECT_NAME }}" }}
+            token: ${{ "{{ secrets.APP_TOKEN }}" }}
+            image: ghcr.io/${{ "{{ github.repository }}" }}
