--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -41,6 +41,10 @@ django-anymail = {extras = ["mailgun"], version = "^12.0"}
 {% if cookiecutter.use_posthog == 'y' -%}
 posthog = "^3.6.6"
 {% endif -%}
+{% if cookiecutter.use_stripe == 'y' -%}
+dj-stripe = "~2.8.4"
+stripe = "~4.0.0"
+{% endif -%}
 
 [tool.poetry.dev-dependencies]
 
