--- a/{{ cookiecutter.project_slug }}/requirements.txt
+++ b/{{ cookiecutter.project_slug }}/requirements.txt
@@ -17,6 +17,7 @@ cookiecutter==2.1.1 ; python_version >= "3.11" and python_version < "4.0"
 cryptography==39.0.1 ; python_version >= "3.11" and python_version < "4.0"
 decorator==5.1.1 ; python_version >= "3.11" and python_version < "4.0"
 deprecated==1.2.14 ; python_version >= "3.11" and python_version < "4.0"
+dj-stripe==2.8.4 ; python_version >= "3.11" and python_version < "4.0"
 django-allauth[socialaccount]==64.0.0 ; python_version >= "3.11" and python_version < "4.0"
 django-anymail[mailgun]==12.0 ; python_version >= "3.11" and python_version < "4.0"
 django-environ==0.11.2 ; python_version >= "3.11" and python_version < "4"
@@ -106,6 +107,7 @@ setuptools==67.6.1 ; python_version >= "3.11" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
 sqlparse==0.4.3 ; python_version >= "3.11" and python_version < "4.0"
 stack-data==0.6.3 ; python_version >= "3.11" and python_version < "4.0"
+stripe==4.0.2 ; python_version >= "3.11" and python_version < "4.0"
 structlog==24.4.0 ; python_version >= "3.11" and python_version < "4.0"
 text-unidecode==1.3 ; python_version >= "3.11" and python_version < "4.0"
 traitlets==5.14.3 ; python_version >= "3.11" and python_version < "4.0"
