--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -13,26 +13,28 @@ REDIS_URL=redis://:{{ cookiecutter.project_slug }}@redis:6379/0
 # Get his values after creating a new app on GitHub: https://github.com/settings/applications/new
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
-{% endif -%}
+{% endif %}
 
 AWS_S3_ENDPOINT_URL=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 
+{% if cookiecutter.use_sentry == 'y' -%}
 SENTRY_DSN=
+{% endif %}
 
 MAILGUN_API_KEY=
 
 {% if cookiecutter.use_posthog == 'y' -%}
 POSTHOG_API_KEY=
-{% endif -%}
+{% endif %}
 
 {% if cookiecutter.use_buttondown == 'y' -%}
 BUTTONDOWN_API_KEY=
-{% endif -%}
+{% endif %}
 
 {% if cookiecutter.use_stripe == 'y' -%}
 STRIPE_LIVE_SECRET_KEY=
 STRIPE_TEST_SECRET_KEY=
 DJSTRIPE_WEBHOOK_SECRET=
-{% endif -%}
+{% endif %}
