--- a/{{ cookiecutter.project_slug }}/deployment/Dockerfile.workers
+++ b/{{ cookiecutter.project_slug }}/deployment/Dockerfile.workers
@@ -16,7 +16,10 @@ COPY . .
 COPY --from=build /app/frontend/build/ ./frontend/build/
 
 RUN pip install --no-cache-dir -r requirements.txt
+
+{% if cookiecutter.use_opentelemetry == 'y' -%}
 RUN opentelemetry-bootstrap -a install
+{% endif %}
 
 EXPOSE 80
 
