--- a/{{ cookiecutter.project_slug }}/Makefile
+++ b/{{ cookiecutter.project_slug }}/Makefile
@@ -13,5 +13,5 @@ test-webhook:
 	docker compose run --rm stripe trigger customer.subscription.created
 
 stripe-sync:
-	docker compose run --rm backend python ./manage.py djstripe_sync_models
+	docker compose run --rm backend python ./manage.py djstripe_sync_models Product Price
 {% endif %}
