--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -74,7 +74,7 @@ include = '\.pyi?$'
 
 [tool.djlint]
 profile="django"
-ignore = "H031"
+ignore = "H031,H006,H023,H021"
 
 [tool.ruff]
 line-length = 120
