--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -11,6 +11,8 @@ REDIS_URL=redis://:{{ cookiecutter.project_slug }}@redis:6379/0
 
 {% if cookiecutter.use_github_auth == 'y' -%}
 # Get his values after creating a new app on GitHub: https://github.com/settings/applications/new
+# For Homepage URL use: http://localhost:8000
+# For Authorization callback URL use: http://localhost:8000/accounts/github/login/callback/
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
 {% endif %}
@@ -34,7 +36,5 @@ BUTTONDOWN_API_KEY=
 {% endif %}
 
 {% if cookiecutter.use_stripe == 'y' -%}
-STRIPE_LIVE_SECRET_KEY=
-STRIPE_TEST_SECRET_KEY=
 DJSTRIPE_WEBHOOK_SECRET=
 {% endif %}
