--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -36,5 +36,7 @@ BUTTONDOWN_API_KEY=
 {% endif %}
 
 {% if cookiecutter.use_stripe == 'y' -%}
+STRIPE_LIVE_SECRET_KEY=
+STRIPE_TEST_SECRET_KEY=
 DJSTRIPE_WEBHOOK_SECRET=
 {% endif %}
