--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -17,9 +17,9 @@ GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
 {% endif %}
 
-AWS_S3_ENDPOINT_URL=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_S3_ENDPOINT_URL=http://minio:9000
+AWS_ACCESS_KEY_ID={{ cookiecutter.project_slug }}
+AWS_SECRET_ACCESS_KEY={{ cookiecutter.project_slug }}
 
 {% if cookiecutter.use_sentry == 'y' -%}
 SENTRY_DSN=
