--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -17,7 +17,7 @@ GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
 {% endif %}
 
-AWS_S3_ENDPOINT_URL=http://minio:9000
+AWS_S3_ENDPOINT_URL=http://localhost:9000
 AWS_ACCESS_KEY_ID={{ cookiecutter.project_slug }}
 AWS_SECRET_ACCESS_KEY={{ cookiecutter.project_slug }}
 
