add restart worker function

--- a/{{ cookiecutter.project_slug }}/Makefile
+++ b/{{ cookiecutter.project_slug }}/Makefile
@@ -15,3 +15,6 @@ test-webhook:
 stripe-sync:
 	docker compose run --rm backend python ./manage.py djstripe_sync_models Product Price
 {% endif %}
+
+restart-worker:
+	docker compose up -d workers --force-recreate
