--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -37,3 +37,6 @@ STRIPE_LIVE_SECRET_KEY=
 STRIPE_TEST_SECRET_KEY=
 DJSTRIPE_WEBHOOK_SECRET=
 {% endif %}
+
+MJML_SECRET=...
+MJML_APPLICATION_ID=...
