--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -38,5 +38,7 @@ STRIPE_TEST_SECRET_KEY=
 DJSTRIPE_WEBHOOK_SECRET=
 {% endif %}
 
+{% if cookiecutter.use_mjml == 'y' -%}
 MJML_SECRET=...
 MJML_APPLICATION_ID=...
+{% endif %}
