--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -39,6 +39,7 @@ DJSTRIPE_WEBHOOK_SECRET=
 {% endif %}
 
 {% if cookiecutter.use_mjml == 'y' -%}
+# Get these values here: https://mjml.io/api/
 MJML_SECRET=...
 MJML_APPLICATION_ID=...
 {% endif %}
