--- a/{{ cookiecutter.project_slug }}/package.json
+++ b/{{ cookiecutter.project_slug }}/package.json
@@ -64,7 +64,7 @@
     "core-js": "^3.20.3",
     "cssnano": "^7.0.1",
     {% if cookiecutter.use_mjml == 'y' -%}
-    "mjml": "^4.15.3",
+    "mjml": "^4.15.3"
     {% endif %}
   }
 }
