--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -50,6 +50,9 @@ django-ninja = "^1.3.0"
 {% if cookiecutter.use_mjml == 'y' -%}
 django-mjml = "^1.3"
 {% endif %}
+{% if cookiecutter.use_pgvector == 'y' -%}
+pgvector = "^0.3.6"
+{% endif %}
 
 [tool.poetry.dev-dependencies]
 
