add logfire and structlog

--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -15,7 +15,7 @@ REDIS_URL=redis://:{{ cookiecutter.project_slug }}@redis:6379/0
 # For Authorization callback URL use: http://localhost:8000/accounts/github/login/callback/
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
-{% endif %}
+{%- endif %}
 
 AWS_S3_ENDPOINT_URL=http://localhost:9000
 AWS_ACCESS_KEY_ID={{ cookiecutter.project_slug }}
@@ -23,23 +23,30 @@ AWS_SECRET_ACCESS_KEY={{ cookiecutter.project_slug }}
 
 {% if cookiecutter.use_sentry == 'y' -%}
 SENTRY_DSN=
-{% endif %}
+{%- endif %}
 MAILGUN_API_KEY=
 {% if cookiecutter.use_posthog == 'y' -%}
 POSTHOG_API_KEY=
-{% endif %}
+{%- endif %}
 {% if cookiecutter.use_buttondown == 'y' -%}
 BUTTONDOWN_API_KEY=
-{% endif %}
+{%- endif %}
 
 {% if cookiecutter.use_stripe == 'y' -%}
 STRIPE_LIVE_SECRET_KEY=
 STRIPE_TEST_SECRET_KEY=
 DJSTRIPE_WEBHOOK_SECRET=
-{% endif %}
+{%- endif %}
 
 {% if cookiecutter.use_mjml == 'y' -%}
 # Get these values here: https://mjml.io/api/
 MJML_SECRET=...
 MJML_APPLICATION_ID=...
-{% endif %}
+{%- endif %}
+
+{% if cookiecutter.use_ai == 'y' -%}
+# depending on what AI provider you use, you can set the API key here.
+# We are using PydanticAI so use names suggested in their docs:
+# https://ai.pydantic.dev/models/
+OPENAI_API_KEY=
+{%- endif %}
