--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -48,11 +48,14 @@ posthog = "^3.6.6"
 {% if cookiecutter.use_stripe == 'y' -%}
 dj-stripe = "~2.8.4"
 stripe = "~4.0.0"
-{% endif %}
+{% endif -%}
 django-ninja = "^1.3.0"
 {% if cookiecutter.use_mjml == 'y' -%}
 django-mjml = "^1.3"
-{% endif %}
+{% endif -%}
+{% if cookiecutter.use_ai == 'y' -%}
+pydantic-ai = "^0.0.24"
+{% endif -%}
 
 [tool.poetry.dev-dependencies]
 
