--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -50,3 +50,7 @@ MJML_APPLICATION_ID=...
 # https://ai.pydantic.dev/models/
 OPENAI_API_KEY=
 {%- endif %}
+
+{% if cookiecutter.use_logfire == 'y' -%}
+LOGFIRE_TOKEN=
+{%- endif %}
