--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -26,6 +26,7 @@ django-structlog = "^8.1.0"
 markdown = "^3.7"
 {% if cookiecutter.use_sentry == 'y' -%}
 sentry-sdk = {extras = ["django"], version = "^2.14.0"}
+structlog-sentry = "^2.2.1"
 {% endif -%}
 {% if cookiecutter.use_opentelemetry == 'y' -%}
 opentelemetry-exporter-otlp = "^1.27.0"
@@ -55,6 +56,9 @@ django-mjml = "^1.3"
 {% endif -%}
 {% if cookiecutter.use_ai == 'y' -%}
 pydantic-ai = "^0.0.24"
+{% endif -%}
+{% if cookiecutter.use_logfire == 'y' -%}
+logfire = "^3.6.4"
 {% endif -%}
 
 [tool.poetry.dev-dependencies]
