--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -36,6 +36,7 @@ BUTTONDOWN_API_KEY=
 STRIPE_LIVE_SECRET_KEY=
 STRIPE_TEST_SECRET_KEY=
 DJSTRIPE_WEBHOOK_SECRET=
+WEBHOOK_UUID=
 {%- endif %}
 
 {% if cookiecutter.use_mjml == 'y' -%}
