--- a/{{ cookiecutter.project_slug }}/docker-compose.yml
+++ b/{{ cookiecutter.project_slug }}/docker-compose.yml
@@ -85,7 +85,7 @@ services:
     command: [
       "listen",
       "-H", "x-djstripe-webhook-secret: ${DJSTRIPE_WEBHOOK_SECRET}",
-      "--forward-to", "http://backend:8000/stripe/webhook/"
+      "--forward-to", "http://backend:8000/stripe/webhook/${WEBHOOK_UUID}/"
     ]
     environment:
       - STRIPE_API_KEY=${STRIPE_TEST_SECRET_KEY}
@@ -94,6 +94,8 @@ services:
     dns:
       - 8.8.8.8
       - 8.8.4.4
+    env_file:
+      - .env
   {% endif %}
 
   minio:
