--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -47,8 +47,8 @@ django-anymail = {extras = ["mailgun"], version = "^12.0"}
 posthog = "^3.6.6"
 {% endif -%}
 {% if cookiecutter.use_stripe == 'y' -%}
-dj-stripe = "~2.8.4"
-stripe = "~4.0.0"
+dj-stripe = "^2.9.0"
+stripe = "^11.6.0"
 {% endif -%}
 django-ninja = "^1.3.0"
 {% if cookiecutter.use_mjml == 'y' -%}
