--- a/{{ cookiecutter.project_slug }}/Makefile
+++ b/{{ cookiecutter.project_slug }}/Makefile
@@ -5,6 +5,15 @@ serve:
 shell:
 	docker compose run --rm backend python ./manage.py shell_plus --ipython
 
+manage:
+	docker compose run --rm backend python ./manage.py $(filter-out $@,$(MAKECMDGOALS))
+
+makemigrations:
+	docker compose run --rm backend python ./manage.py makemigrations
+
+migrate:
+	docker compose run --rm backend python ./manage.py migrate
+
 test:
 	docker compose run --rm backend pytest
 
