Migrate to Ruff, remove documentation
Replaced Black and isort with Ruff for code formatting and linting.
Configured Ruff via pyproject.toml, including lint rules, formatting
settings, and per-file ignores for migrations.

Updated the pre-commit configuration to use Ruff's check and format
hooks, along with version updates for other hooks (pre-commit-hooks,
djLint, poetry-plugin-export).

Removed documentation files and associated dependencies (mkdocs,
mkdocstrings, mkdocs-material). Deleted the static requirements.txt
file, relying solely on pyproject.toml for dependency management.

Adjusted a `# noqa` comment in core/utils.py to align with the new
Ruff configuration's handling of line length.

--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -9,9 +9,6 @@ python = "^3.11"
 django-allauth = {extras = ["socialaccount"], version = "^64.0.0"}
 python-webpack-boilerplate = "^1.0.0"
 django-widget-tweaks = "^1.4.12"
-mkdocs = "^1.4.2"
-mkdocstrings = "^0.20.0"
-mkdocs-material = "^9.0.12"
 django = "^5.0.4"
 django-environ = "^0.11.2"
 psycopg2 = "^2.9.9"
@@ -53,32 +50,36 @@ logfire = "^3.6.4"
 
 [tool.poetry.dev-dependencies]
 
-
 [tool.poetry.group.dev.dependencies]
-pylint = "^2.17.1"
-pylint-django = "^2.5.3"
 pre-commit = "^3.2.1"
-mkdocs = "^1.6.0"
-mkdocs-material = "^9.5.23"
+djlint = "^1.36.4"
+ruff = "^0.12.0"
+ty = "^0.0.1a11"
 
-[tool.isort]
-profile = "django"
-combine_as_imports = true
-include_trailing_comma = true
-line_length = 120
-multi_line_output = 3
+[tool.ruff]
+line-length = 100
+target-version = "py311"
 
-[tool.black]
-line-length = 120
-target-version = ['py39']
-include = '\.pyi?$'
+[tool.ruff.lint]
+select = [
+    "E",    # pycodestyle errors
+    "F",    # pyflakes
+    "B",    # flake8-bugbear
+    "I",    # isort
+    "DJ",   # django-specific rules
+    "UP",   # pyupgrade
+    "C90",  # mccabe complexity
+]
+
+[tool.ruff.lint.per-file-ignores]
+"**/migrations/*.py" = ["E501", "F401", "F403", "F405"]
+
+[tool.ruff.format]
+quote-style = "double"
 
 [tool.djlint]
 profile="django"
 ignore = "H031,H006,H023,H021,H011,T002"
-
-[tool.ruff]
-line-length = 120
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
