--- a/{{ cookiecutter.project_slug }}/.pre-commit-config.yaml
+++ b/{{ cookiecutter.project_slug }}/.pre-commit-config.yaml
@@ -1,36 +1,26 @@
 exclude: .*migrations\/.*
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v5.0.0
     hooks:
     -   id: check-yaml
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
 
-- repo: https://github.com/psf/black
-  rev: 22.12.0
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.12.0
   hooks:
-  - id: black
-    language_version: python3.9
-
-- repo: https://github.com/charliermarsh/ruff-pre-commit
-  rev: 'v0.1.14'
-  hooks:
-    - id: ruff
-
-- repo: https://github.com/pycqa/isort
-  rev: 5.12.0
-  hooks:
-    - id: isort
-      name: isort (python)
+    - id: ruff-check
+      args: [ --fix ]
+    - id: ruff-format
 
 - repo: https://github.com/djlint/djLint
-  rev: v1.35.2
+  rev: v1.36.4
   hooks:
     - id: djlint-django
 
-- repo: https://github.com/python-poetry/poetry
-  rev: '1.4.1'
+- repo: https://github.com/python-poetry/poetry-plugin-export
+  rev: '1.9.0'
   hooks:
     - id: poetry-export
       args: [
