--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -20,6 +20,7 @@ GITHUB_CLIENT_SECRET=""
 AWS_S3_ENDPOINT_URL=http://localhost:9000
 AWS_ACCESS_KEY_ID={{ cookiecutter.project_slug }}
 AWS_SECRET_ACCESS_KEY={{ cookiecutter.project_slug }}
+AWS_S3_BUCKET_NAME={{ cookiecutter.project_slug }}
 
 {% if cookiecutter.use_sentry == 'y' -%}
 SENTRY_DSN=
