--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -8,7 +8,7 @@ ENVIRONMENT=dev
 
 SECRET_KEY="super-secret-key"
 
-SITE_URL=http://localhost:8009
+SITE_URL=http://localhost:8000
 
 POSTGRES_HOST=db
 POSTGRES_DB={{ cookiecutter.project_slug }}
@@ -16,13 +16,14 @@ POSTGRES_USER={{ cookiecutter.project_slug }}
 POSTGRES_PORT=5432
 POSTGRES_PASSWORD={{ cookiecutter.project_slug }}
 
+REDIS_HOST=redis
 REDIS_PASSWORD={{ cookiecutter.project_slug }}
 REDIS_PORT=6379
 
 # If you want to enable Social Auth via Github
 # Get his values after creating a new app on GitHub: https://github.com/settings/applications/new
-# For Homepage URL use: http://localhost:8009
-# For Authorization callback URL use: http://localhost:8009/accounts/github/login/callback/
+# For Homepage URL use: http://localhost:8000
+# For Authorization callback URL use: http://localhost:8000/accounts/github/login/callback/
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
 
