--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -11,7 +11,7 @@ python-webpack-boilerplate = "^1.0.0"
 django-widget-tweaks = "^1.4.12"
 django = "^5.0.4"
 django-environ = "^0.11.2"
-psycopg2 = "^2.9.9"
+psycopg = {extras = ["binary"], version = "^3.2.10"}
 ipython = "^8.27.0"
 django-extensions = "^3.2.3"
 pillow = "^10.4.0"
@@ -46,7 +46,7 @@ pydantic-ai = "^0.3.4"
 {% endif -%}
 {% if cookiecutter.use_logfire == 'y' -%}
 logfire = "^3.6.4"
-{% endif -%}
+{% endif %}
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.2.1"
