A bunch of changes

--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -57,9 +57,8 @@ WEBHOOK_UUID=
 {%- endif %}
 
 {% if cookiecutter.use_mjml == 'y' -%}
-# Get these values here: https://mjml.io/api/
-MJML_SECRET=...
-MJML_APPLICATION_ID=...
+# MJML URL for self-hosted server
+MJML_URL=http://mjml:15500
 {%- endif %}
 
 {% if cookiecutter.use_ai == 'y' -%}
