--- a/{{ cookiecutter.project_slug }}/docker-compose-local.yml
+++ b/{{ cookiecutter.project_slug }}/docker-compose-local.yml
@@ -81,19 +81,18 @@ services:
 
   {% if cookiecutter.use_stripe == 'y' -%}
   stripe:
-    image: stripe/stripe-cli:latest
-    command: [
-      "listen",
-      "-H", "x-djstripe-webhook-secret: ${DJSTRIPE_WEBHOOK_SECRET}",
-      "--forward-to", "http://backend:8000/stripe/webhook/${WEBHOOK_UUID}/"
-    ]
-    environment:
-      - STRIPE_API_KEY=${STRIPE_TEST_SECRET_KEY}
-      - STRIPE_DEVICE_NAME=djstripe_docker
-      - DJSTRIPE_WEBHOOK_SECRET=${DJSTRIPE_WEBHOOK_SECRET}
-    dns:
-      - 8.8.8.8
-      - 8.8.4.4
+    build:
+      context: .
+      dockerfile: Dockerfile-python
+    working_dir: /app
+    command: python manage.py stripe_listen
+    volumes:
+      - .:/app
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
     env_file:
       - .env
   {% endif %}
