--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -1,3 +1,9 @@
+# If you deploying via docker compose you don't need to update these values:
+# - POSTGRES_HOST
+# - POSTGRES_PORT
+# - REDIS_HOST
+# - REDIS_PORT
+
 # should be 'off' in prod
 DEBUG=on
 
