--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -47,6 +47,7 @@ pydantic-ai = "^1.9.1"
 # {% if cookiecutter.use_logfire == 'y' -%}
 logfire = "^3.6.4"
 # {% endif %}
+pgvector = "^0.4.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.2.1"
