--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -21,37 +21,37 @@ django-storages = {extras = ["s3"], version = "^1.14.4"}
 structlog = "^24.4.0"
 django-structlog = "^8.1.0"
 markdown = "^3.7"
-# {% if cookiecutter.use_sentry == 'y' -%}
+{% if cookiecutter.use_sentry == 'y' -%}
 sentry-sdk = {extras = ["django"], version = "^2.14.0"}
 structlog-sentry = "^2.2.1"
-# {% endif -%}
+{% endif -%}
 gunicorn = "^23.0.0"
 pytest = "^8.3.3"
 pytest-django = "^4.9.0"
 redis = "^5.0.8"
 django-anymail = {extras = ["mailgun"], version = "^12.0"}
-# {% if cookiecutter.use_posthog == 'y' -%}
+{% if cookiecutter.use_posthog == 'y' -%}
 posthog = "^5.3.0"
-# {% endif -%}
-# {% if cookiecutter.use_stripe == 'y' -%}
+{% endif -%}
+{% if cookiecutter.use_stripe == 'y' -%}
 dj-stripe = "^2.10.0"
 stripe = "^13.0.1"
-# {% endif -%}
+{% endif -%}
 django-ninja = "^1.3.0"
-# {% if cookiecutter.use_mjml == 'y' -%}
+{% if cookiecutter.use_mjml == 'y' -%}
 django-mjml = "^1.3"
-# {% endif -%}
-# {% if cookiecutter.use_ai == 'y' -%}
+{% endif -%}
+{% if cookiecutter.use_ai == 'y' -%}
 pydantic-ai = "^1.9.1"
-# {% endif -%}
-# {% if cookiecutter.use_logfire == 'y' -%}
+{% endif -%}
+{% if cookiecutter.use_logfire == 'y' -%}
 logfire = "^3.6.4"
-# {% endif %}
-# {% if cookiecutter.generate_docs == 'y' -%}
+{% endif %}
+{% if cookiecutter.generate_docs == 'y' -%}
 python-frontmatter = "^1.1.0"
 pyyaml = "^6.0.3"
 pygments = "^2.19.2"
-# {% endif -%}
+{% endif -%}
 pgvector = "^0.4.1"
 
 [tool.poetry.group.dev.dependencies]
