--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -9,12 +9,12 @@ python = "^3.13"
 django-allauth = {extras = ["socialaccount"], version = "^65.13.1"}
 python-webpack-boilerplate = "^1.0.0"
 django-widget-tweaks = "^1.4.12"
-django = "^5.0.4"
+django = "^5.2.9"
 django-environ = "^0.11.2"
 psycopg = {extras = ["binary"], version = "^3.2.10"}
 ipython = "^8.27.0"
 django-extensions = "^3.2.3"
-pillow = "^10.4.0"
+pillow = "^12.0.0"
 django-q2 = "^1.7.2"
 whitenoise = "^6.7.0"
 django-storages = {extras = ["s3"], version = "^1.14.4"}
@@ -42,17 +42,18 @@ django-ninja = "^1.3.0"
 django-mjml = "^1.3"
 {% endif -%}
 {% if cookiecutter.use_ai == 'y' -%}
-pydantic-ai = "^1.9.1"
+pydantic-ai = "^1.37.0"
+pgvector = "^0.4.1"
 {% endif -%}
 {% if cookiecutter.use_logfire == 'y' -%}
-logfire = "^3.6.4"
+logfire = "^4.16.0"
 {% endif %}
 {% if cookiecutter.generate_docs == 'y' -%}
 python-frontmatter = "^1.1.0"
 pyyaml = "^6.0.3"
 pygments = "^2.19.2"
 {% endif -%}
-pgvector = "^0.4.1"
+tqdm = "^4.67.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.2.1"
