--- a/{{ cookiecutter.project_slug }}/Dockerfile-python
+++ b/{{ cookiecutter.project_slug }}/Dockerfile-python
@@ -2,7 +2,12 @@ FROM python:3.13
 
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt
+ENV UV_PROJECT_ENVIRONMENT=/opt/venv
+ENV VIRTUAL_ENV=/opt/venv
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+
+COPY pyproject.toml uv.lock ./
+RUN pip install --upgrade pip && pip install --no-cache-dir uv
+RUN uv sync --frozen --no-dev --no-install-project
 
 COPY . .
