--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -1,69 +1,70 @@
-[tool.poetry]
+[project]
 name = "{{ cookiecutter.project_slug }}"
 version = "0.1.0"
 description = "{{ cookiecutter.project_description }}"
-authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
+authors = [{ name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }]
+requires-python = ">=3.14,<4.0"
+dependencies = [
+    "django>=6.0.2",
+    "django-allauth>=65.14.0",
+    "django-anymail>=14.0",
+    "django-environ>=0.12.0",
+    "django-extensions>=4.1",
+    "django-ninja>=1.5.3",
+    "django-q2>=1.9.0",
+    "django-storages>=1.14.6",
+    "django-structlog>=10.0.0",
+    "django-widget-tweaks>=1.5.1",
+    "gunicorn>=25.0.1",
+    "ipython>=9.10.0",
+    "markdown>=3.10.1",
+    "pillow>=12.1.0",
+    "psycopg2-binary>=2.9.11",
+    "pytest>=9.0.2",
+    "pytest-django>=4.11.1",
+    "python-webpack-boilerplate>=1.0.4",
+    "redis>=7.1.0",
+    "structlog>=25.5.0",
+    "tqdm>=4.67.3",
+    "whitenoise>=6.11.0",
+    {% if cookiecutter.use_sentry == 'y' -%}
+    "sentry-sdk>=2.52.0",
+    "structlog-sentry>=2.2.1",
+    {% endif %}
+    {% if cookiecutter.use_posthog == 'y' -%}
+    "posthog>=7.8.2",
+    {% endif %}
+    {% if cookiecutter.use_stripe == 'y' -%}
+    "dj-stripe>=2.10.3",
+    "stripe>=14.3.0",
+    {% endif %}
+    {% if cookiecutter.use_mjml == 'y' -%}
+    "django-mjml>=1.5",
+    {% endif %}
+    {% if cookiecutter.use_ai == 'y' -%}
+    "pydantic-ai>=1.55.0",
+    "pgvector>=0.4.2",
+    {% endif %}
+    {% if cookiecutter.use_logfire == 'y' -%}
+    "logfire>=4.22.0",
+    {% endif %}
+    {% if cookiecutter.generate_docs == 'y' -%}
+    "python-frontmatter>=1.1.0",
+    "pyyaml>=6.0.3",
+    "pygments>=2.19.2",
+    {% endif %}
+]
 
-[tool.poetry.dependencies]
-python = "^3.13"
-django-allauth = {extras = ["socialaccount"], version = "^65.13.1"}
-python-webpack-boilerplate = "^1.0.0"
-django-widget-tweaks = "^1.4.12"
-django = "^5.2.9"
-django-environ = "^0.11.2"
-psycopg = {extras = ["binary"], version = "^3.2.10"}
-ipython = "^8.27.0"
-django-extensions = "^3.2.3"
-pillow = "^12.0.0"
-django-q2 = "^1.7.2"
-whitenoise = "^6.7.0"
-django-storages = {extras = ["s3"], version = "^1.14.4"}
-structlog = "^24.4.0"
-django-structlog = "^8.1.0"
-markdown = "^3.7"
-{% if cookiecutter.use_sentry == 'y' -%}
-sentry-sdk = {extras = ["django"], version = "^2.14.0"}
-structlog-sentry = "^2.2.1"
-{% endif -%}
-gunicorn = "^23.0.0"
-pytest = "^8.3.3"
-pytest-django = "^4.9.0"
-redis = "^5.0.8"
-django-anymail = {extras = ["mailgun"], version = "^12.0"}
-{% if cookiecutter.use_posthog == 'y' -%}
-posthog = "^5.3.0"
-{% endif -%}
-{% if cookiecutter.use_stripe == 'y' -%}
-dj-stripe = "^2.10.0"
-stripe = "^13.0.1"
-{% endif -%}
-django-ninja = "^1.3.0"
-{% if cookiecutter.use_mjml == 'y' -%}
-django-mjml = "^1.3"
-{% endif -%}
-{% if cookiecutter.use_ai == 'y' -%}
-pydantic-ai = "^1.37.0"
-pgvector = "^0.4.1"
-{% endif -%}
-{% if cookiecutter.use_logfire == 'y' -%}
-logfire = "^4.16.0"
-{% endif %}
-{% if cookiecutter.generate_docs == 'y' -%}
-python-frontmatter = "^1.1.0"
-pyyaml = "^6.0.3"
-pygments = "^2.19.2"
-{% endif -%}
-tqdm = "^4.67.1"
-
-[tool.poetry.group.dev.dependencies]
-pre-commit = "^3.2.1"
-djlint = "^1.36.4"
-ruff = "^0.12.0"
-ty = "^0.0.1a11"
+[dependency-groups]
+dev = [
+    "djlint>=1.36.4",
+    "pre-commit>=4.5.1",
+    "ruff>=0.15.0",
+    "ty>=0.0.15",
+]
 
 [tool.ruff]
 line-length = 100
-target-version = "py311"
 
 [tool.ruff.lint]
 select = [
@@ -87,5 +88,8 @@ profile="django"
 ignore = "H031,H006,H023,H021,H011,T002"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=68"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+py-modules = []
