--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -56,10 +56,11 @@ BUTTONDOWN_API_KEY=
 
 {% if cookiecutter.use_stripe == 'y' -%}
 # Stripe Integration, not needed unless you want to sell access
-STRIPE_LIVE_SECRET_KEY=
-STRIPE_TEST_SECRET_KEY=
-DJSTRIPE_WEBHOOK_SECRET=
-WEBHOOK_UUID=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+STRIPE_PRICE_ID_MONTHLY=
+STRIPE_PRICE_ID_YEARLY=
 {%- endif %}
 
 {% if cookiecutter.use_mjml == 'y' -%}
