--- a/{{ cookiecutter.project_slug }}/Makefile
+++ b/{{ cookiecutter.project_slug }}/Makefile
@@ -1,3 +1,6 @@
+%:
+	@:
+
 serve:
 	docker compose -f docker-compose-local.yml up -d --build
 	docker compose -f docker-compose-local.yml logs -f backend
@@ -15,15 +18,7 @@ migrate:
 	docker compose -f docker-compose-local.yml run --rm backend python ./manage.py migrate
 
 test:
-	docker compose -f docker-compose-local.yml run --rm backend pytest
+	docker compose -f docker-compose-local.yml run --rm backend pytest $(filter-out $@,$(MAKECMDGOALS))
 
 restart-worker:
 	docker compose -f docker-compose-local.yml up -d workers --force-recreate
-
-{% if cookiecutter.use_stripe == 'y' -%}
-test-webhook:
-	docker compose -f docker-compose-local.yml run --rm stripe trigger customer.subscription.created
-
-stripe-sync:
-	docker compose -f docker-compose-local.yml run --rm backend python ./manage.py djstripe_sync_models Product Price
-{% endif %}
