--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "ipython>=9.10.0",
     "markdown>=3.10.1",
     "pillow>=12.1.0",
-    "psycopg2-binary>=2.9.11",
+    "psycopg[binary]>=3.3.2",
     "pytest>=9.0.2",
     "pytest-django>=4.11.1",
     "python-webpack-boilerplate>=1.0.4",
