--- a/{{ cookiecutter.project_slug }}/package.json
+++ b/{{ cookiecutter.project_slug }}/package.json
@@ -63,8 +63,7 @@
     "@stimulus-components/reveal": "^5.0.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.20.3",
-    "cssnano": "^7.0.1",
-    {% if cookiecutter.use_mjml == 'y' -%}
+    "cssnano": "^7.0.1"{% if cookiecutter.use_mjml == 'y' -%},
     "mjml": "^4.15.3"
     {% endif %}
   }
