--- a/{{ cookiecutter.project_slug }}/deployment/Dockerfile.server
+++ b/{{ cookiecutter.project_slug }}/deployment/Dockerfile.server
@@ -14,9 +14,11 @@ ENV UV_PROJECT_ENVIRONMENT=/opt/venv
 ENV VIRTUAL_ENV=/opt/venv
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 
-COPY pyproject.toml uv.lock ./
+COPY pyproject.toml ./
 RUN pip install --no-cache-dir uv
-RUN uv sync --frozen --no-dev --no-install-project
+# NOTE: We intentionally don't require uv.lock here so freshly-generated projects build out of the box.
+# If you want fully reproducible builds, generate and commit a uv.lock in your rendered project, then add --frozen.
+RUN uv sync --no-dev --no-install-project
 
 COPY . .
 COPY --from=build /app/frontend/build/ ./frontend/build/
